--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -145,7 +145,8 @@ jobs:
             echo "docker tag $image $new_image"
             docker tag $image $new_image
             echo "docker push $new_image"
-            docker push $new_image
+            # docker push $new_image
+            docker push registry.cn-hangzhou.aliyuncs.com/chahongjing/aliyun_name_space:nginx
             echo "开始清理磁盘空间"
             echo "=============================================================================="
             df -hT
